# Advent-of-Code

./: .gitignore  README.md
rust/: Cargo.toml  create-day.fish
rust/2015/: create-day.fish
rust/2015/day01/: Cargo.toml
rust/2015/day02/: Cargo.toml
rust/2015/day03/: Cargo.toml
rust/2015/day04/: Cargo.toml
rust/2015/day05/: Cargo.toml
rust/2015/day06/: Cargo.toml
rust/2015/day08/: Cargo.toml
rust/2015/day09/: Cargo.toml
rust/2015/day10/: Cargo.toml
rust/2015/day11/: Cargo.toml
rust/2015/day12/: Cargo.toml
rust/2015/day13/: Cargo.toml
rust/2015/day14/: Cargo.toml
rust/2015/day15/: Cargo.toml
rust/2015/day16/: Cargo.toml
rust/2015/day17/: Cargo.toml
rust/2015/day18/: Cargo.toml
rust/2015/day19/: Cargo.toml
rust/2015/day20/: Cargo.toml
rust/2015/day21/: Cargo.toml
rust/2015/day22/: Cargo.toml
rust/2015/day23/: Cargo.toml
rust/2015/day24/: Cargo.toml
rust/2015/day25/: Cargo.toml
rust/2016/: create-day.fish
rust/2016/day01/: Cargo.toml
rust/2024/: create-day.fish
rust/aoc_utils/: Cargo.toml
rust/day01/: Cargo.toml
rust/day02/: Cargo.toml
rust/day03/: Cargo.toml
rust/day04/: Cargo.toml
rust/day05/: Cargo.toml
rust/day06/: Cargo.toml
rust/day07/: Cargo.toml
rust/day08/: Cargo.toml
rust/day09/: Cargo.toml
rust/day10/: Cargo.toml
rust/day11/: Cargo.toml
rust/day12/: Cargo.toml
rust/day13/: Cargo.toml
rust/day14/: Cargo.toml
rust/day15/: Cargo.toml
rust/day16/: Cargo.toml
rust/day17/: Cargo.toml
rust/day18/: Cargo.toml
rust/day20/: Cargo.toml
rust/day21/: Cargo.toml
(+95 files in other folders)
