[workspace]
resolver = "2"
members = [
    "2015/day01",
    "2015/day02",
    "2015/day03",
    "2015/day04",
    "2015/day05",
    "2015/day06",
    "2015/day07", "2015/day08", "2015/day09", "2015/day10", "2015/day11", "2015/day12", "2015/day13", "2015/day14", "2015/day15",
    "aoc_utils",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09", "day10", "day11", "day12", "day13",
]
