[workspace]
resolver = "2"
members = [
    "aoc_utils",
    "2015/day01",
    "2015/day02",
    "2015/day03",
    "2015/day04",
    "2015/day05",
    "2015/day06",
    "2015/day07",
    "2015/day08",
    "2015/day09",
    "2015/day10",
    "2015/day11",
    "2015/day12",
    "2015/day13",
    "2015/day14",
    "2015/day15",
    "2015/day16",
    "2015/day17",
    "2015/day18",
    "2015/day19",
    "2015/day20",
    "2015/day21",
    "2015/day22",
    "2015/day23",
    "2015/day24",
    "2015/day25",
    "2024/day01",
    "2024/day02",
    "2024/day03",
    "2024/day04",
    "2024/day05",
    "2024/day06",
    "2024/day07",
    "2024/day08",
    "2024/day09",
    "2024/day10",
    "2024/day11",
    "2024/day12",
    "2024/day13",
    "2024/day14",
    "2024/day15",
    "2024/day16",
    "2024/day17",
    "2024/day18",
    "2024/day19",
    "2024/day20",
    "2024/day21",
    "2024/day22", "2024/day23", "2024/day24", "2024/day25", "2016/day01",
]
